Add GitHub link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h3>Other information</h3>
             <ul>
                 <li><i>Disclaimer: </i>The responsibility for any use or misuse of this program lies with the user, not the creator. You agree by using this program that you take full responsibility for any actions you take with this program's results. The creator trusts the user to be responsible and positive, but recognizes that not all people are deserving of such trust.</li>
-                <li><i>Git: </i>This code is uploaded to a GitHub</li>
+                <li><i>Git: </i><a target="_blank" rel="noopener noreferrer" href="https://github.com/Brutus314/MCB_NiftyBuildingTool">Here</a></li>
             </ul>
         </div>
         <script src="index.js"></script>
