--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </div>
         <div class="d-flex justify-content-start m-2">
             <div class="d-flex flex-column">
-                <input type="text" id="input-text" placeholder="NBT Output Name"><br>
-                <input type="number" id="input-number" placeholder="Commands per NPC"><br>
+                <input type="text" id="nbt-title" placeholder="NBT Output Name"><br>
+                <input type="number" id="commands-per-npc" placeholder="Commands per NPC"><br>
                 <input type="file" id="input-file" style="color: rgba(0,0,0,0);">
             </div>
         </div>
@@ -22,11 +22,16 @@
             <h3>Instructions</h3>
             <ul>
                 <li>Aquire a text file containing a list of setblock, summon, and fill commands. The program will only read lines that begin with these commands. A preceeding / does not matter. The program will ignore all other lines</li>
-                <li>Specify a name for your output NBT (do not include the ".txt" part). This is so you can tell files apart on your machine, and has no effect on the NBT</li>
-                <li>Specify how many commands each NPC should have. More commands means less NPCs, but also run the risk of overloading the NPC and causing it to not function</li>
+                <li>Specify a name for your output NBT (do not include the ".txt" part). This is partially so you can tell the text files apart on your machine, and affects the name of the NPCs and item. If blank, the in-game name is "Unnamed Build"</li>
+                <li>Specify how many commands each NPC should have. More commands means less NPCs, but also run the risk of overloading the NPC and causing it to not function. Default is 346, but some builds require this number to be as low as 200</li>
                 <li>Upload a text file (or really any file with readable text). You'll automatically download an output text file called "NiftyBuildingTool_{NBT_NAME}.txt"</li>
                 <li>Do whatever you're going to do to load the NBT to your world</li>
-                <li><b>IMPORTANT: </b>Remove all existing NPCs created by this program</li>
+                <li><b>IMPORTANT: </b>Remove all existing NPCs created by this program before using this program
+                    <ul>
+                        <li><code>/kill @e[tag="NiftyBuildingTool",type=NPC]</code> will remove all NPCs created by this program</li>
+                        <li><code>/kill @e[name="{NBT_NAME}",type=NPC]</code> will remove only the NPCs related to a partiuclar build. Obviously, replace {NBT_NAME} with whatever the actual name is</li>
+                    </ul>
+                </li>
             </ul>
             <h3>Known Limitations</h3>
             <ul>
@@ -45,6 +50,7 @@
             <ul>
                 <li><i>Disclaimer: </i>The responsibility for any use or misuse of this program lies with the user, not the creator. You agree by using this program that you take full responsibility for any actions you take with this program's results. The creator trusts the user to be responsible and positive, but recognizes that not all people are deserving of such trust.</li>
                 <li><i>Git: </i><a target="_blank" rel="noopener noreferrer" href="https://github.com/Brutus314/MCB_NiftyBuildingTool">Here</a></li>
+                <li>The mastermind behind this project is Clawsky123#0049</li>
             </ul>
         </div>
         <script src="index.js"></script>
