--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li>Specify how many commands each NPC should have. More commands means less NPCs, but also run the risk of overloading the NPC and causing it to not function. Default is 346, but some builds require this number to be as low as 200</li>
                 <li>Upload a text file (or really any file with readable text). You'll automatically download an output text file called "NiftyBuildingTool_{NBT_NAME}.txt"</li>
                 <li>Do whatever you're going to do to load the NBT to your world</li>
+                <li><b>IMPORTANT: </b>Ensure the time is day, weather is clear, wait for all NPCs to leave the beehive, and DO NOT break the beehive before completing the build</li>
                 <li><b>IMPORTANT: </b>Remove all existing NPCs created by this program before using this program
                     <ul>
                         <li><code>/kill @e[tag="NiftyBuildingTool",type=NPC]</code> will remove all NPCs created by this program</li>
