--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
             <h3>Known Limitations</h3>
             <ul>
-                <li>Uses a beehive</li>
+                <li>Uses a moving block</li>
                 <li>Does not support double quotes in the name</li>
                 <li>Only guaranteed to actually do stuff in a 9x9 square chunk area, centered on the NPCs. Some world prep beforehand can mitigate this issue</li>
                 <li>"Atomic" commands are not guaranteed to be run atomically or in the intended order. i.e. The floor a mob would stand on is not guaranteed to exist when the mob is summoned, and liquids may flow unexpectedly</li>
